--- a/style.css
+++ b/style.css
@@ -1,81 +1,62 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(27, 27, 27);
+    font-family: sans-serif;
+    background-color: rgb(255 255 255);
     display: grid;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
     font-size: 13px;
-
 }
 
 .container {
-    display: grid;
-    justify-content: center;
+    display: flex;
+    text-align: center;
+    background-color: rgb(255, 255, 255);
+    width: 95%;
+    height: 65%;
+    border-radius: 2em;
+    max-height: 75%;
+    padding: 20px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    flex-direction: column;
     align-items: center;
-    text-align: center;
-    background-color: rgb(243, 243, 243);
-    width: 450px;
-    min-height: 450px;
-    height: auto;
-    border-radius: 6px;
-    gap: 20px;
-    padding: 20px;
-}
-
-.container-second{
-    display: block;
-    justify-content: center;
-    text-align: center;
-    background-color: rgb(33, 33, 33);;
-    width: 450px;
-    min-height: 100px;
-    height: 120px;
-    border-radius: 6px;
-    padding: 20px;
-    color: #ffffff;
-}
-.container-second p{
-    font-size: 15px;
-}
-
-.container-second a{
-    color: #ffffff;
-    transition: 0.3s;
-    font-size: 12px;
-}
-
-.container-second a:hover{
-    color:#1988ff;
 }
 
 input[type="text"]{
     width: 350px;
     padding: 6px;
-    margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
     outline: none;
     transition: 0.4s;
+    height: 2em;
+    border-radius: 1em;
+    font-size: 1.1em;
+    border: 0;
+    padding: 1em;
+    transition: 0.5s;
+    margin-bottom: 3em;
+    background-color: rgb(245, 245, 245);
 }
-input[type="text"]:focus{
-    border-color: #1988ff;
+
+h2,h3{
+    color: rgb(124, 124, 124);
 }
+
 button{
     justify-content: center;
-    background-color: #ffffff;
+    background-color: #fab700;
     height: 50px;
-    width: 400px;
+    width: 380px;
     color: rgb(0, 0, 0);
     border: 0px solid #ffffff;
-    border-radius: 5px;
+    border-radius: 1em;
     font-size: 13px;
     transition: 0.4s;
 }
 button:hover{
-    border-radius: 10px;
-    background-color: #1988ff;
+    border-radius: 0em;
+    background-color: #fab700;
     color: white;
     border: 0px solid;
 }
@@ -87,125 +68,20 @@ button:hover{
     border-radius: 5px;
     overflow: hidden;
     width: 100%;
-    height: 100%;
+    height: 37%;
 }
 
 #imgBox img{
-    width: 200px;
-    height: 200px;
-    padding: 10px;
+    width: 150px;
+    height: 150px;
+    padding: 1em;
     background-color: white;
 }
 #imgBox.show-img{
-    max-height: 300px;
+    max-height: 46%;
     margin: 10xp auto;
 }
 
 #qrImage {
     display: none;
-}
-
-.githublogo{
-    filter: brightness(2000%);
-    width: 140px;
-    height: 50px;
-}
-
-/* Responsivo para tablets */
-@media (max-width: 768px) {
-    .container, .container-second {
-        width: 80%;
-    }
-
-    input[type="text"] {
-        width: 100%;
-    }
-
-    button {
-        width: 100%;
-    }
-
-    #imgBox {
-        width: 100%;
-    }
-
-    #imgBox img {
-        width: 150px;
-        height: 150px;
-    }
-}
-
-@media (max-width: 480px) {
-    body {
-        font-size: 12px;
-    }
-
-    .container, .container-second {
-        width: 90%;
-        padding: 15px;
-    }
-
-    input[type="text"] {
-        width: 100%;
-    }
-
-    button {
-        width: 100%;
-    }
-
-    #imgBox {
-        width: 100%;
-    }
-
-    #imgBox img {
-        width: 100px;
-        height: 100px;
-    }
-
-    .container-second p {
-        font-size: 14px;
-    }
-
-    .container-second a {
-        font-size: 11px;
-    }
-
-    .githublogo {
-        width: 100px;
-        height: 35px;
-    }
-}
-
-@media (max-width: 320px) {
-    .container, .container-second {
-        width: 100%;
-        padding: 10px;
-    }
-
-    input[type="text"] {
-        width: 100%;
-    }
-
-    button {
-        width: 100%;
-        font-size: 11px;
-    }
-
-    #imgBox img {
-        width: 80px;
-        height: 80px;
-    }
-
-    .container-second p {
-        font-size: 12px;
-    }
-
-    .container-second a {
-        font-size: 10px;
-    }
-
-    .githublogo {
-        width: 80px;
-        height: 30px;
-    }
 }
