--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
 body {
     font-family: sans-serif;
     background-color: rgb(255 255 255);
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     margin: 0;
     font-size: 13px;
 }
@@ -13,18 +9,17 @@ body {
     display: flex;
     text-align: center;
     background-color: rgb(255, 255, 255);
-    width: 90%;
-    height: 65%;
-    margin: 3em;
+    width: 100%;
+    max-width: 425px;
+    padding: 2em;
     border-radius: 2em;
-    max-height: 75%;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     flex-direction: column;
     align-items: center;
 }
 
 input[type="text"] {
-    width: 350px;
+    width: 80%;
     padding: 6px;
     border: 1px solid #ccc;
     outline: none;
@@ -34,10 +29,9 @@ input[type="text"] {
     font-size: 1.1em;
     border: 0;
     padding: 1em;
-    transition: 0.5s;
     background-color: rgb(245, 245, 245);
-    margin: 3em;
-
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
 
 h2,
@@ -49,14 +43,14 @@ button {
     justify-content: center;
     background-color: #fab700;
     height: 50px;
-    width: 380px;
+    width: 90%;
     color: rgb(0, 0, 0);
     border: 0px solid #ffffff;
     border-radius: 1em;
     font-size: 13px;
     transition: 0.4s;
-    margin: 3em;
-
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
 
 button:hover {
@@ -69,10 +63,10 @@ button:hover {
 #imgBox {
     display: grid;
     justify-content: center;
-    width: 360px;
+    width: 100%;
+    max-width: 360px;
     border-radius: 5px;
     overflow: hidden;
-    width: 100%;
     height: 37%;
 }
 
@@ -85,7 +79,7 @@ button:hover {
 
 #imgBox.show-img {
     max-height: 46%;
-    margin: 10xp auto;
+    margin: 10px auto;
 }
 
 #qrImage {
@@ -95,4 +89,22 @@ button:hover {
 .qr-icon {
     width: 10em;
     margin: 1em;
+}
+
+.sup {
+    margin: 10em;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        display: flex;
+        text-align: center;
+        background-color: rgb(255, 255, 255);
+        width: 50em;
+        min-width: 22em;
+    }
 }
