--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@ h3 {
     color: rgb(124, 124, 124);
 }
 
+.better-h3 {
+    font-size: 1.7em;
+    margin: 0;
+    margin-top: 1em;
+}
+
 button {
     justify-content: center;
     background-color: #fab700;
@@ -106,7 +112,8 @@ button:hover {
         width: 50em;
         min-width: 22em;
     }
-    .sup{
+
+    .sup {
         margin-top: 3em;
     }
 }
