--- a/style.css
+++ b/style.css
@@ -93,7 +93,6 @@ button:hover {
 
 .qr-icon {
     width: 10em;
-    margin: 1em;
 }
 
 .sup {
@@ -103,6 +102,29 @@ button:hover {
     align-content: center;
     align-items: center;
 }
+
+.spinner {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #fab700;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    margin: auto;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+  #imgBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 12.5em;
+  }
+  
 
 @media screen and (max-width: 600px) {
     .container {
