--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     background-color: rgb(255, 255, 255);
     width: 100%;
     max-width: 425px;
-    padding: 2em;
+    padding: 1.5em;
     border-radius: 2em;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     flex-direction: column;
@@ -31,7 +31,7 @@ input[type="text"] {
     padding: 1em;
     background-color: rgb(245, 245, 245);
     margin-top: 3em;
-    margin-bottom: 3em;
+    margin-bottom: 2.25em;
 }
 
 h2,
@@ -55,8 +55,8 @@ button {
     border-radius: 1em;
     font-size: 13px;
     transition: 0.4s;
-    margin-top: 3em;
-    margin-bottom: 3em;
+    margin-top: 2.25em;
+    margin-bottom: 2em;
 }
 
 button:hover {
@@ -92,7 +92,7 @@ button:hover {
 }
 
 .qr-icon {
-    width: 10em;
+    width: 9em;
 }
 
 .sup {
@@ -132,10 +132,22 @@ button:hover {
         text-align: center;
         background-color: rgb(255, 255, 255);
         width: 50em;
-        min-width: 22em;
+        min-width: 23em;
     }
 
     .sup {
-        margin-top: 3em;
+        /* margin-top: 3em; */
+    }
+
+    .qr-icon{
+        width: 8em;
+    }
+
+    .form-input{
+        height: 1.25em !important;
+    }
+    button{
+        height: 3.5em !important;
+        font-size: 1em;
     }
 }
